log/test/192.168.56.103 2017_11_13 23_09_39.txt
R3>
<R3>display interface G0/0/0
GigabitEthernet0/0/0 current state : UP
Line protocol current state : UP
Last line protocol up time : 2017-11-13 22:55:22 UTC-08:00
Description:
Route Port,The Maximum Transmit Unit is 1500
Internet Address is 192.168.56.103/24
IP Sending Frames' Format is PKTFMT_ETHNT_2, Hardware address is 5489-9873-0934
Last physical up time   : 2017-11-13 22:55:22 UTC-08:00
Last physical down time : 2017-11-13 22:55:19 UTC-08:00
Current system time: 2017-11-13 23:09:35-08:00
Hardware address is 5489-9873-0934
    Last 300 seconds input rate 26 bytes/sec, 0 packets/sec
    Last 300 seconds output rate 0 bytes/sec, 0 packets/sec
    Input: 27084 bytes, 204 packets
    Output: 7055 bytes, 105 packets
    Input:
      Unicast: 93 packets, Multicast: 90 packets
      Broadcast: 21 packets
    Output:
      Unicast: 101 packets, Multicast: 0 packets
      Broadcast: 4 packets
    Input bandwidth utilization  :    0%
    Output bandwidth utilization :    0%

<R3>display interface G0/0/1
GigabitEthernet0/0/1 current state : DOWN
Line protocol current state : DOWN
Description:
Route Port,The Maximum Transmit Unit is 1500
Internet protocol processing : disabled
IP Sending Frames' Format is PKTFMT_ETHNT_2, Hardware address is 5489-9873-0935
Last physical up time   : -
Last physical down time : 2017-11-13 22:55:19 UTC-08:00
Current system time: 2017-11-13 23:09:36-08:00
Hardware address is 5489-9873-0935
    Last 300 seconds input rate 0 bytes/sec, 0 packets/sec
    Last 300 seconds output rate 0 bytes/sec, 0 packets/sec
    Input: 0 bytes, 0 packets
    Output: 0 bytes, 0 packets
    Input:
      Unicast: 0 packets, Multicast: 0 packets
      Broadcast: 0 packets
    Output:
      Unicast: 0 packets, Multicast: 0 packets
      Broadcast: 0 packets
    Input bandwidth utilization  :    0%
    Output bandwidth utilization :    0%

<R3>display interface G0/0/2
GigabitEthernet0/0/2 current state : DOWN
Line protocol current state : DOWN
Description:
Route Port,The Maximum Transmit Unit is 1500
Internet protocol processing : disabled
IP Sending Frames' Format is PKTFMT_ETHNT_2, Hardware address is 5489-9873-0936
Last physical up time   : -
Last physical down time : 2017-11-13 22:55:19 UTC-08:00
Current system time: 2017-11-13 23:09:37-08:00
Hardware address is 5489-9873-0936
    Last 300 seconds input rate 0 bytes/sec, 0 packets/sec
    Last 300 seconds output rate 0 bytes/sec, 0 packets/sec
    Input: 0 bytes, 0 packets
    Output: 0 bytes, 0 packets
    Input:
      Unicast: 0 packets, Multicast: 0 packets
      Broadcast: 0 packets
    Output:
      Unicast: 0 packets, Multicast: 0 packets
      Broadcast: 0 packets
    Input bandwidth utilization  :    0%
    Output bandwidth utilization :    0%

<R3>display interface %s5
                      ^
Error: Wrong parameter found at '^' position.
<R3>